[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "vcrpy"
version = "7.0.1+urllib3v2"
description = "Automatically mock your HTTP interactions to simplify and speed up testing"
readme = "README.rst"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Kevin McCarthy", email = "me@kevinmccarthy.org"}]
dependencies = [
    "PyYAML",
    "wrapt",
    "yarl",
    "urllib3>=2,<3",
]

[project.optional-dependencies]
tests = [
    "aiohttp",
    "boto3",
    "httplib2",
    "httpx",
    "pytest-aiohttp",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-httpbin",
    "pytest",
    "requests>=2.22.0",
    "tornado",
    "urllib3",
    "Werkzeug==2.0.3",
]

[tool.codespell]
skip = '.git,*.pdf,*.svg,.tox'
ignore-regex = "\\\\[fnrstv]"

[tool.pytest.ini_options]
addopts = ["--strict-config", "--strict-markers"]
asyncio_default_fixture_loop_scope = "function"
markers = ["online"]

[tool.ruff]
line-length = 110
target-version = "py39"

[tool.ruff.lint]
select = [
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "COM", # flake8-commas
    "E",   # pycodestyle error
    "F",   # pyflakes
    "I",   # isort
    "ISC", # flake8-implicit-str-concat
    "PIE", # flake8-pie
    "RUF", # Ruff-specific rules
    "UP",  # pyupgrade
    "W",   # pycodestyle warning
]

[tool.ruff.lint.isort]
known-first-party = ["vcr"]
